--- a/R/Session_1/Session_1_Excercise.ipynb
+++ b/R/Session_1/Session_1_Excercise.ipynb
@@ -11,9 +11,9 @@
     "### Session 1: notes\n",
     "\n",
     "1. Module 1 covers Rstudio basics \n",
-    "    - [Link]()\n",
+    "    - [Link](https://github.com/corybaird/SPP_Data_Seminar/blob/main/R/Session_1/Module_1_Rstudio.ipynb)\n",
     "2. Module 2 covers downloading \n",
-    "    - [Link]()\n",
+    "    - [Link](https://github.com/corybaird/SPP_Data_Seminar/blob/main/R/Session_1/Module_2_Download.ipynb)\n",
     "3. Excercise to practice material covered in Modules 1 & 2\n",
     "    - Current page"
    ]
