--- a/R/Session_2/Model_4_Regression.ipynb
+++ b/R/Session_2/Model_4_Regression.ipynb
@@ -2,23 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "turned-adapter",
+   "id": "shaped-treasurer",
    "metadata": {},
    "source": [
     "# Session 2-- Manipulating data and regression \n",
     "\n",
     "\n",
-    "## Session 2 is composed of 3 parts¶\n",
+    "## Session 2 is composed of 2 parts¶\n",
     "\n",
     "1. Module 3: Manipulating data\n",
-    "    - Notes (Current page)\n",
-    "    - Video\n",
+    "    - [Notes](https://github.com/corybaird/SPP_Data_Seminar/blob/main/R/Session_2/Module_3_Manipulation.ipynb)\n",
+    "    - [Video](https://www.youtube.com/watch?v=6UCIoUJusTI&ab_channel=CB)\n",
     "2. Module 4: Regression\n",
-    "    - Notes\n",
-    "    - Video\n",
+    "    - Notes (current page)\n",
+    "    - [Video](https://youtu.be/wCCYfMe_h3k)\n",
     "\n",
-    "3. Excercise to practice material covered in Modules 3 & 4\n",
-    "    - Link\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -27,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "european-percentage",
+   "id": "numerous-filename",
    "metadata": {},
    "source": [
     "## A.1 Import libraries"
@@ -36,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "reduced-cutting",
+   "id": "adjusted-demographic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acoustic-ability",
+   "id": "overall-valley",
    "metadata": {},
    "source": [
     "# 1. Install data"
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "operating-pressure",
+   "id": "great-morris",
    "metadata": {},
    "source": [
     "## 1.1 WDI data\n",
@@ -72,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "engaged-offset",
+   "id": "color-stone",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "eastern-tobago",
+   "id": "excessive-sewing",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "threaded-bristol",
+   "id": "historical-variation",
    "metadata": {},
    "source": [
     "### 1.1.2 Filter data"
@@ -148,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "concrete-negative",
+   "id": "simple-joint",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "registered-carter",
+   "id": "portable-cotton",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "searching-indication",
+   "id": "parliamentary-defendant",
    "metadata": {},
    "source": [
     "### 1.1.3 Rename column"
@@ -222,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "laughing-israel",
+   "id": "accomplished-silver",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opponent-dublin",
+   "id": "chronic-period",
    "metadata": {},
    "source": [
     "### 1.1.4 Drop columns"
@@ -289,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "impossible-trick",
+   "id": "matched-slope",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "macro-eight",
+   "id": "classical-madagascar",
    "metadata": {},
    "source": [
     "## 1.2 NYT data"
@@ -350,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "ultimate-malawi",
+   "id": "direct-packaging",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "legislative-washer",
+   "id": "absolute-jesus",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "going-night",
+   "id": "emotional-kidney",
    "metadata": {},
    "source": [
     "### 1.2.1 Filter only last date"
@@ -419,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "suffering-courage",
+   "id": "systematic-justice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "ancient-picture",
+   "id": "freelance-aaron",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coated-authorization",
+   "id": "funded-foundation",
    "metadata": {},
    "source": [
     "### 1.2.2 Select columns"
@@ -496,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "clinical-strike",
+   "id": "intelligent-economics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "cheap-tobago",
+   "id": "pretty-guide",
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dried-bargain",
+   "id": "acquired-ethiopia",
    "metadata": {},
    "source": [
     "## 1.3 Create new column"
@@ -566,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "informational-afternoon",
+   "id": "perfect-norwegian",
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quiet-limit",
+   "id": "precious-sculpture",
    "metadata": {},
    "source": [
     "## 1.3 Merge"
@@ -628,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "positive-teaching",
+   "id": "intelligent-money",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "subtle-passport",
+   "id": "developmental-gateway",
    "metadata": {},
    "source": [
     "# 2. Regression"
@@ -691,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "uniform-exposure",
+   "id": "foster-closure",
    "metadata": {},
    "source": [
     "## 2.A Always visualize before statistical analysis"
@@ -700,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "unauthorized-father",
+   "id": "authentic-university",
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thermal-supply",
+   "id": "divine-career",
    "metadata": {},
    "source": [
     "## 1.1 OLS"
@@ -729,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "surface-impression",
+   "id": "timely-xerox",
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "japanese-religious",
+   "id": "gross-oracle",
    "metadata": {},
    "source": [
     "## 1.2 Saving and manipulating results"
@@ -763,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "hourly-poland",
+   "id": "continuing-bench",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "legal-alexandria",
+   "id": "compatible-illinois",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "relative-essex",
+   "id": "capital-domain",
    "metadata": {},
    "source": [
     "### 1.2.1 Residuals and other data"
@@ -818,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "chemical-auckland",
+   "id": "canadian-loading",
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "automotive-federation",
+   "id": "joined-phrase",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "weekly-segment",
+   "id": "reverse-interim",
    "metadata": {},
    "source": [
     "## 1.3 Plotting results"
@@ -942,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "outstanding-glass",
+   "id": "wound-charles",
    "metadata": {},
    "source": [
     "### 1.3.1 Reg line with scatter"
@@ -951,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "neural-environment",
+   "id": "refined-edwards",
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "defined-scheduling",
+   "id": "particular-fields",
    "metadata": {},
    "source": [
     "### 1.3.2 Plotting residuals"
@@ -981,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "synthetic-inflation",
+   "id": "brutal-elevation",
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "understood-fiction",
+   "id": "intermediate-clause",
    "metadata": {},
    "source": [
     "## 1.4 Multiple regression\n",
@@ -1011,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "spread-vegetarian",
+   "id": "critical-number",
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1048,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "challenging-hartford",
+   "id": "informational-branch",
    "metadata": {},
    "source": [
     "## 1.5 Robust S.E. Regression"
@@ -1058,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "collaborative-psychology",
+   "id": "intelligent-abuse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "discrete-freight",
+   "id": "distributed-semester",
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "electoral-hacker",
+   "id": "assumed-reducing",
    "metadata": {},
    "source": [
     "# 2. Diagnostics"
@@ -1109,7 +1108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bright-hanging",
+   "id": "bottom-civilization",
    "metadata": {},
    "source": [
     "## 2.A Regression"
@@ -1118,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "owned-branch",
+   "id": "outstanding-leisure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "retained-bones",
+   "id": "polar-fisher",
    "metadata": {},
    "source": [
     "## 2.1 Breusch pagan: test for heteroskedasticity¶\n"
@@ -1136,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "historical-small",
+   "id": "amino-grammar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1147,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "natural-soccer",
+   "id": "actual-teacher",
    "metadata": {},
    "outputs": [
     {
@@ -1171,77 +1170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "closing-pharmacology",
-   "metadata": {},
-   "source": [
-    "### 2.1.1 If statement"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "id": "limiting-hayes",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<strong>BP:</strong> 0.536950628546184"
-      ],
-      "text/latex": [
-       "\\textbf{BP:} 0.536950628546184"
-      ],
-      "text/markdown": [
-       "**BP:** 0.536950628546184"
-      ],
-      "text/plain": [
-       "       BP \n",
-       "0.5369506 "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "bp_p = bp$p.value\n",
-    "bp_p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "id": "close-genealogy",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"P-value:\"\n",
-      "       BP \n",
-      "0.5369506 \n",
-      "[1] \"Cannot reject null. No evidence of heteroskedasticity\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "if (bp_p<.1){\n",
-    "    print('P-value:')\n",
-    "    print(bp_p)\n",
-    "    print(\"Reject null. Thus there is evidence of heteroskedasticity\")\n",
-    "    \n",
-    "}else{\n",
-    "    print('P-value:')\n",
-    "    print(bp_p)\n",
-    "    print(\"Cannot reject null. No evidence of heteroskedasticity\")\n",
-    "\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "phantom-bubble",
+   "id": "identified-lounge",
    "metadata": {},
    "source": [
     "## 2.2 DW-test: Serial correlation\n",
@@ -1263,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "homeless-withdrawal",
+   "id": "advisory-attention",
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "victorian-adaptation",
+   "id": "informed-function",
    "metadata": {},
    "source": [
     "## 2.3 Functional misspecification"
@@ -1296,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "annual-jewel",
+   "id": "powerful-privacy",
    "metadata": {},
    "outputs": [
     {
