--- a/R/Session_2/Module_3_Manipulation.ipynb
+++ b/R/Session_2/Module_3_Manipulation.ipynb
@@ -11,17 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Session 2 is composed of 3 parts¶\n",
+    "## Session 2 is composed of 2 parts¶\n",
     "\n",
     "1. Module 3: Manipulating data\n",
     "    - Notes (Current page)\n",
     "    - Video\n",
     "2. Module 4: Regression\n",
-    "    - Notes\n",
-    "    - Video\n",
+    "    - [Notes](https://github.com/corybaird/SPP_Data_Seminar/blob/main/R/Session_2/Model_4_Regression.ipynb)\n",
+    "    - [Video](https://youtu.be/wCCYfMe_h3k)\n",
     "\n",
-    "3. Excercise to practice material covered in Modules 3 & 4\n",
-    "    - Link\n"
+    "\n"
    ]
   },
   {
@@ -1100,7 +1099,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Summarise: Summary stats"
+    "## 4.5. Summarise: Summary stats"
    ]
   },
   {
@@ -1161,7 +1160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6 Groupby"
+    "## 4.6 Groupby"
    ]
   },
   {
