--- a/R/Session_2/Module_3_Manipulation.ipynb
+++ b/R/Session_2/Module_3_Manipulation.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Session 2-- Manipulating data and regression \n"
+    "# Session 2-- Manipulating data and regression \n",
+    "- 2021-Fall"
    ]
   },
   {
@@ -15,7 +16,7 @@
     "\n",
     "1. Module 3: Manipulating data\n",
     "    - Notes (Current page)\n",
-    "    - Video\n",
+    "    - [Video](https://www.youtube.com/watch?v=6UCIoUJusTI&ab_channel=CB)\n",
     "2. Module 4: Regression\n",
     "    - [Notes](https://github.com/corybaird/SPP_Data_Seminar/blob/main/R/Session_2/Model_4_Regression.ipynb)\n",
     "    - [Video](https://youtu.be/wCCYfMe_h3k)\n",
