--- a/R/Session_3/Module_6/Module_6_ManipulateModel.ipynb
+++ b/R/Session_3/Module_6/Module_6_ManipulateModel.ipynb
@@ -9,12 +9,12 @@
     "## Session 3 is composed of 2 parts\n",
     "\n",
     "- Module 5: Graphing and mapping\n",
-    "    - Notes\n",
-    "    - Video\n",
+    "    - [Notes](https://github.com/corybaird/SPP_Data_Seminar/blob/main/R/Session_3/Module_5/Module_5_GraphMap.ipynb)\n",
+    "    - [Video](https://www.youtube.com/watch?v=5hrFI-_Rtqk)\n",
     "\n",
     "- Module 6: Data manipulation and panel regressions\n",
-    "    - Notes (current page)\n",
-    "    - Video"
+    "   - [Notes](https://github.com/corybaird/SPP_Data_Seminar/blob/main/R/Session_3/Module_6/Module_6_ManipulateModel.ipynb)\n",
+    "   - [Video](https://youtu.be/xVo8zsi6DrI)"
    ]
   },
   {
